adding csrf protection and make twig helper to put the csrf in every post form

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "illuminate/database": "^11.19",
         "illuminate/events": "^11.19",
         "symfony/http-foundation": "^7.1",
-        "cartalyst/sentinel": "^8.0"
+        "cartalyst/sentinel": "^8.0",
+        "slim/csrf": "^1.5"
     }
 }
